Fixed card sizing issue on mobile

--- a/styles/index.css
+++ b/styles/index.css
@@ -301,7 +301,7 @@ footer h2 {
 
   .card .top {
     width: 100%;
-    padding: 60px 0;
+    padding: 30px 0;
   }
 
   .fab-container {
